@@ -298,6 +298,7 @@ level=Level
 floor_up_tt=Go up a floor level\n- Press __CONTROL__fp_floor_up__ to go up-
 floor_top_tt=Go the the top floor
 utility_dialog_tt=Open the utility dialog
+show_floor_items_tt=Replaces the subfactory item totals above with the totals for the current floor. Only applies to subfloors, not the top floor.
 production_instruction_subfactory=Add a subfactory by clicking the green ’+’-button in the top left
 production_instruction_product=Add a product by clicking the gray ’+’-button in the products-box above
 production_instruction_recipe=Add a recipe by left-clicking the product in the products-box above
