@@ -124,5 +124,12 @@ data:extend({
         filename = "__factoryplanner__/graphics/arrow_right_dark.png",
         size = 32, icon_mipmaps = 2,
         flags = {"gui-icon"}
+    },
+    {
+        type = "sprite",
+        name = "fp_sprite_filter_dark",
+        filename = "__factoryplanner__/graphics/filter_dark.png",
+        size = 32, icon_mipmaps = 2,
+        flags = {"gui-icon"}
     }
 })
